<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Modez</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

	
	<string name="previewPhoto">Preview Photo</string>
	
	<!--  Tags -->
	<string name="tagAddPlaceholder">Type a new tag here...</string>
	
	<!-- Home page -->
	<string name="themeOfWeekFirstTitle">High Heels &amp; Unusual</string>
	<string name="themeOfWeekSecondTitle">Handbags</string>
	<string name="themeOfWeekCapitalize">THEME OF WEEK</string>
	
	<string name="tagOne">Paris, France</string>
	<string name="tagSecond">Comics</string>
	<string name="tagThird">Winter</string>
	
	<string name="cameraError">Whoops - your device doesn\'t support capturing camera</string>
</resources>
